venue-info: as carousel - fix Safari margin-collapse bug

--- a/src/components/blocks/venue-info/_venue-info.scss
+++ b/src/components/blocks/venue-info/_venue-info.scss
@@ -22,6 +22,7 @@
     // hack required to prevent Safari collapsing the margin on &__item:last-child, set below
     &::after {
       content: '.';
+      margin-left: -30px; // required to eliminate the extra gap that flex inserts before this pseudo el
       width: 0;
     }
   }
